# axis2c-unofficial

./: .hgignore  AUTHORS  CREDITS  ChangeLog  INSTALL  Makefile.am  NEWS  NOTICE  README  autogen.sh  axis2c.pc.in  axis2c_build.sh  configure.ac
axiom/src/xpath/: Makefile.am  xpath.c  xpath_functions.c  xpath_functions.h  xpath_internals.c  xpath_internals.h  xpath_internals_engine.c  xpath_internals_engine.h  xpath_internals_iterators.c  xpath_internals_iterators.h  xpath_internals_parser.c  xpath_internals_parser.h  xpath_streaming.c  xpath_streaming.h
axiom/test/om/: Makefile.am  test_om.c
axiom/test/soap/: Makefile.am  test_soap.c
axiom/test/util/: Makefile.am  axiom_util_test.c
axiom/test/xpath/: Makefile.am  test_xpath.c  test_xpath_streaming.c
guththila/: Makefile.am  autogen.sh  configure.ac
guththila/include/: guththila.h  guththila_attribute.h  guththila_buffer.h  guththila_defines.h  guththila_error.h  guththila_namespace.h  guththila_reader.h  guththila_stack.h  guththila_token.h  guththila_utf8.h  guththila_xml_writer.h
guththila/samples/: guththila_main.c  guththila_writer_main.c
guththila/src/: Makefile.am  guththila_attribute.c  guththila_buffer.c  guththila_namespace.c  guththila_reader.c  guththila_stack.c  guththila_token.c  guththila_utf8.c  guththila_xml_parser.c  guththila_xml_writer.c
guththila/tests/: s  test.c  test.h  test_attribute.c  test_utf8_decoder.c  test_utf8_encoder.c
neethi/: Makefile.am  autogen.sh  configure.ac
neethi/include/: axis2_rm_assertion.h  axis2_rm_assertion_builder.h  neethi_all.h  neethi_assertion.h  neethi_assertion_builder.h  neethi_constants.h  neethi_engine.h  neethi_exactlyone.h  neethi_includes.h  neethi_mtom_assertion_checker.h  neethi_operator.h  neethi_policy.h  neethi_reference.h  neethi_registry.h  neethi_util.h  rp_algorithmsuite.h  rp_algorithmsuite_builder.h  rp_asymmetric_binding.h  rp_asymmetric_binding_builder.h  rp_binding_commons.h  rp_bootstrap_policy_builder.h  rp_builders.h  rp_defines.h  rp_element.h  rp_encryption_token_builder.h  rp_header.h  rp_https_token.h  rp_https_token_builder.h  rp_includes.h  rp_initiator_token_builder.h  rp_issued_token.h  rp_issued_token_builder.h  rp_layout.h  rp_layout_builder.h  rp_policy_creator.h  rp_property.h  rp_protection_token_builder.h  rp_rampart_config.h  rp_rampart_config_builder.h  rp_recipient_token_builder.h  (+31 more)
neethi/src/: Makefile.am  all.c  assertion.c  assertion_builder.c  engine.c  exactlyone.c  mtom_assertion_checker.c  operator.c  policy.c  reference.c  registry.c  util.c
neethi/src/rmpolicy/: Makefile.am  rm_assertion.c  rm_assertion_builder.c
neethi/test/: Makefile.am  test.c
samples/: Makefile.am  NEWS  autogen.sh  build.sh  configure.ac
samples/client/: Makefile.am
samples/client/amqp/: Makefile.am
samples/client/echo/: Makefile.am  echo.c
samples/client/google/: Makefile.am  google_client.c
samples/client/math/: Makefile.am  axis2_math_stub.c  axis2_math_stub.h  math_client.c
samples/client/mtom/: Makefile.am  mtom_client.c
samples/client/mtom_callback/: Makefile.am  mtom_callback.mk  mtom_callback_client.c
samples/client/notify/: Makefile.am  notify_client.c
samples/client/version/: Makefile.am  axis2_version_stub.c  axis2_version_stub.h  version_client.c
samples/client/yahoo/: Makefile.am  yahoo_client.c
samples/codegen/databinding/: READEME.txt
samples/mtom_caching_callback/: Makefile.am  mtom_caching_callback.c
samples/mtom_sending_callback/: Makefile.am  mtom_sending_callback.c
samples/server/: Makefile.am  axis2.xml
samples/server/Calculator/: Calculator.wsdl  Makefile.am  calc.c  calc.h  calc_skeleton.c
samples/server/echo/: Makefile.am  echo.c  echo.h  echo_skeleton.c  services.xml
samples/server/math/: Makefile.am  math.c  math.h  math_skeleton.c
samples/server/mtom/: Makefile.am  mtom.c  mtom.h  mtom_skeleton.c
samples/server/mtom_callback/: Makefile.am  mtom_callback.c  mtom_callback.h  mtom_callback.mk  mtom_skeleton.c  services.xml
samples/server/notify/: Makefile.am  notify.c  notify.h  notify_skeleton.c
samples/server/sg_math/: Makefile.am  add.c  add.h  add_skeleton.c  div.c  div.h  div_skeleton.c  mul.c  mul.h  mul_skeleton.c  sub.c  sub.h  sub_skeleton.c
samples/server/version/: Makefile.am  services.xml  version.c  version.h  version_skel.c
samples/user_guide/clients/: Makefile.am  echo_blocking.c  echo_blocking_addr.c  echo_blocking_auth.c  echo_blocking_auth.mk  echo_blocking_dual.c  echo_blocking_soap11.c  echo_non_blocking.c  echo_non_blocking_dual.c  echo_rest.c  echo_util.c  echo_util.h
src/core/engine/: Makefile.am  addr_disp.c  axis2_disp_checker.h  conf.c  (+10 more)
tools/tcpmon/: Makefile.am  README  autogen.sh  configure.ac
util/: Makefile.am  autogen.sh  configure.ac
util/include/: Makefile.am  axutil_allocator.h  axutil_array_list.h  axutil_base64.h  axutil_base64_binary.h  axutil_class_loader.h  axutil_config.h  axutil_date_time.h  axutil_date_time_util.h  axutil_digest_calc.h  axutil_dir_handler.h  axutil_dll_desc.h  axutil_duration.h  axutil_env.h  axutil_error.h  axutil_error_default.h  axutil_file.h  axutil_file_handler.h  axutil_generic_obj.h  axutil_hash.h  axutil_http_chunked_stream.h  axutil_linked_list.h  axutil_log.h  axutil_log_default.h  axutil_network_handler.h  axutil_param.h  axutil_param_container.h  axutil_properties.h  axutil_property.h  axutil_qname.h  axutil_rand.h  axutil_stack.h  axutil_stream.h  axutil_string.h  axutil_string_util.h  axutil_thread.h  axutil_thread_pool.h  axutil_types.h  axutil_uri.h  axutil_url.h  (+4 more)
util/src/: Makefile.am  allocator.c  array_list.c  base64.c  base64_binary.c  class_loader.c  date_time.c  date_time_util.c  digest_calc.c  dir_handler.c  dll_desc.c  duration.c  env.c  error.c  file.c  file_handler.c  generic_obj.c  hash.c  http_chunked_stream.c  linked_list.c  log.c  md5.c  network_handler.c  param.c  param_container.c  properties.c  property.c  qname.c  rand.c  stack.c  stream.c  string.c  string_util.c  thread_pool.c  types.c  uri.c  url.c  utils.c  uuid_gen.c  version.c
util/test/: Makefile.am
(+1335 files in other folders)
