TESTS =

noinst_LTLIBRARIES = librm_policy.la

librm_policy_la_SOURCES = rm_assertion.c rm_assertion_builder.c

librm_policy_la_LIBADD  = ../../../util/src/libaxutil.la

INCLUDES = -I$(top_builddir)/include \
			-I ../../include \
			-I ../../../util/include \
	        -I ../../../axiom/include \
    	    -I ../../../include
