prglibdir=$(prefix)/services/mtom
prglib_LTLIBRARIES = libmtom.la
prglib_DATA= services.xml
EXTRA_DIST = services.xml mtom.mk mtom.h
noinst_HEADERS = mtom.h
SUBDIRS =
libmtom_la_SOURCES = mtom.c mtom_skeleton.c
libmtom_la_LIBADD  = -L$(AXIS2C_HOME)/lib -laxis2_axiom -laxis2_engine -laxutil
INCLUDES = @AXIS2INC@
