SUBDIRS=http $(TCP_DIR) $(AMQP_DIR)
DIST_SUBDIRS=http tcp amqp
EXTRA_DIST=Makefile.am amqp/server/axis2_amqp_server/axis2_amqp_server.h \
amqp/receiver/axis2_amqp_receiver.h amqp/receiver/qpid_receiver/axis2_qpid_receiver.h \
amqp/receiver/qpid_receiver/axis2_qpid_receiver_interface.h amqp/receiver/qpid_receiver/request_processor/axis2_amqp_request_processor.h \
amqp/util/axis2_amqp_defines.h amqp/util/axis2_amqp_util.h amqp/sender/qpid_sender/axis2_qpid_sender_interface.h \
amqp/sender/qpid_sender/axis2_qpid_sender.h amqp/sender/axis2_amqp_sender.h

